--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -27,6 +27,9 @@ navInfo:
         <link rel="stylesheet" href="/assets/css/navbar.css"/>
 
         <title>{{title}}</title>
+
+        <script src="../assets/js/jquery-3.3.1.js" defer></script>
+        <script src="../assets/js/navbar.js" defer></script>
     </head>
     <body>
         {% include "navbar.njk" %}
@@ -35,7 +38,6 @@ navInfo:
                 <h1>{{title}}</h1>
             </header>
             <main>{{content | safe}}</main>
-            <script src="" async defer></script>
         </div>
     </body>
 </html>
