--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -2,6 +2,7 @@
 :root {
     --background-color: #11191f;
     --border-color: #1f2d38;
+    --popout-color: #141e26;
     --text-color: #bbc6ce;
     --subtitle-color: #596b78;
     --subtitle-hover-color: #73828c;
@@ -10,6 +11,7 @@
     --link-color: #1095c1;
     --link-hover-color: #19b3e6;
     --main-font-size: 16px;
+    --nav-gap: 1.25rem;
     /* Colors from PicoCSS Dark mode */
 }
 
@@ -61,4 +63,9 @@ a:hover {
     color: var(--link-hover-color);
     text-decoration: underline;
     transition: color 0.15s ease;
+}
+
+.svg-icon-color {
+    filter: invert(41%) sepia(6%) saturate(1404%) hue-rotate(163deg)
+        brightness(95%) contrast(88%);
 }
