fixing build issues

--- a/src/_includes/navbar.njk
+++ b/src/_includes/navbar.njk
@@ -2,7 +2,7 @@
     <div class="container">
         <nav>
             <a class="nav-img" href="{{ '/' | url }}">
-                <img src="../assets/images/favicon.png">
+                <img src="/assets/images/favicon.png">
             </a>
             {% include "nav_links.njk" %}
         </nav>
@@ -13,14 +13,14 @@
     <div class="container">
         <nav>
             <a class="nav-img" href="{{ '/' | url }}">
-                <img src="../assets/images/favicon.png">
+                <img src="/assets/images/favicon.png">
             </a>
-            <img src="../assets/images/bars-solid.svg" alt="" id="nav-mobile-bars" class="svg-icon-color">
+            <img src="/assets/images/bars-solid.svg" alt="" id="nav-mobile-bars" class="svg-icon-color">
         </nav>
     </div>
     <nav-border></nav-border>
     <div id="popout" class="hide">
-        <img src="../assets/images/xmark-solid.svg" alt="" id="nav-mobile-x" class="svg-icon-color">
+        <img src="/assets/images/xmark-solid.svg" alt="" id="nav-mobile-x" class="svg-icon-color">
         {% include "nav_links.njk" %}
     </div>
 </mobile>
