--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -1,35 +1,7 @@
----
-navInfo:
--   id: /
-    title: About
--   id: /research
-    title: Research
--   id: /design
-    title: Design
----
-
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8"/>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-        <meta name="description" content=""/>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-        <link
-			rel="icon"
-			type="image/x-icon"
-			href="/assets/images/favicon.ico"
-		/>
-        <link rel="stylesheet" href="/assets/css/normalize.css"/>
-        <link rel="stylesheet" href="/assets/css/skeleton.css"/>
-        <link rel="stylesheet" href="/assets/css/base.css"/>
-        <link rel="stylesheet" href="/assets/css/navbar.css"/>
-
-        <title>{{title}}</title>
-
-        <script src="../assets/js/jquery-3.3.1.js" defer></script>
-        <script src="../assets/js/navbar.js" defer></script>
+        {% include "basehead.njk" %}
     </head>
     <body>
         {% include "navbar.njk" %}
