--- a/src/css/base.css
+++ b/src/css/base.css
@@ -17,7 +17,8 @@
 
 @font-face {
     font-family: "OpenSans-Var";
-    src: url("../fonts/OpenSans-VariableFont_wdth,wght.ttf") format("truetype");
+    src: url("../assets/fonts/OpenSans-VariableFont_wdth,wght.ttf")
+        format("truetype");
 }
 
 html {
@@ -68,4 +69,17 @@ a:hover {
 .svg-icon-color {
     filter: invert(41%) sepia(6%) saturate(1404%) hue-rotate(163deg)
         brightness(95%) contrast(88%);
+}
+
+/* Mobile vs Desktop */
+@media (min-width: 550px) {
+    mobile {
+        display: none;
+    }
+}
+
+@media (max-width: 549px) {
+    desktop {
+        display: none;
+    }
 }
