--- a/src/_includes/basehead.njk
+++ b/src/_includes/basehead.njk
@@ -3,22 +3,14 @@
 <meta name="description" content=""/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-{# <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico"/>
-<link rel="stylesheet" href="/css/skeleton.css"/>
-<link rel="stylesheet" href="/css/normalize.css"/>
-<link rel="stylesheet" href="/css/base.css"/>
-<link rel="stylesheet" href="/css/navbar.css"/> #}
-
 <link rel="icon" type="image/x-icon" href="{{ '/assets/images/favicon.ico' | url }}"/>
 <link rel="stylesheet" href="{{ '/css/skeleton.css' | url }}"/>
 <link rel="stylesheet" href="{{ '/css/normalize.css' | url }}"/>
 <link rel="stylesheet" href="{{ '/css/base.css' | url }}"/>
 <link rel="stylesheet" href="{{ '/css/navbar.css' | url }}"/>
+<link rel="stylesheet" href="{{ '/css/' + cssFile | url }}"/>
 
 <title>{{title}}</title>
-
-{# <script src="/js/jquery-3.3.1.js" defer></script>
-<script src="/js/navbar.js" defer></script> #}
 
 <script src="{{ '/js/jquery-3.3.1.js' | url }}" defer></script>
 <script src="{{ '/js/navbar.js' | url }}" defer></script>
