--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -4,12 +4,12 @@
         {% include "basehead.njk" %}
     </head>
     <body>
-        {% include "navbar.njk" %}
-        <div class="container">
-            <header>
-                <h1>{{title}}</h1>
-            </header>
-            <main>{{content | safe}}</main>
-        </div>
-    </body>
+        <header>{% include "navbar.njk" %}</header>
+        <main>
+            <div class="container" id="content-wrap">
+                {{content | safe}}
+            </div>
+        </main>
+    </main>
+</body>
 </html>
