--- a/src/_includes/basehead.njk
+++ b/src/_includes/basehead.njk
@@ -4,8 +4,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
 <link rel="icon" type="image/x-icon" href="{{ '/assets/images/favicon.ico' | url }}"/>
-<link rel="stylesheet" href="{{ '/css/skeleton.css' | url }}"/>
-<link rel="stylesheet" href="{{ '/css/normalize.css' | url }}"/>
+{# <link rel="stylesheet" href="{{ '/css/skeleton.css' | url }}"/>
+<link rel="stylesheet" href="{{ '/css/normalize.css' | url }}"/> #}
+<link rel="stylesheet" href="{{ '/css/bootstrap-grid.css' | url }}"/>
 <link rel="stylesheet" href="{{ '/css/base.css' | url }}"/>
 <link rel="stylesheet" href="{{ '/css/navbar.css' | url }}"/>
 <link rel="stylesheet" href="{{ '/css/' + cssFile | url }}"/>
