--- a/src/_includes/base/nav-links.njk
+++ b/src/_includes/base/nav-links.njk
@@ -15,5 +15,5 @@
     {% for info in navInfo %}
         <a href="{{ info.id | url}}" class="{{ 'active' if info.id == navCategory}}">{{info.title}}</a>
     {% endfor %}
-    <a href="/assets/pdfs/CV_LeFevre_F23.pdf" target="_blank" rel="noopener noreferrer">CV</a>
+    <a href="/assets/pdfs/CV.pdf" target="_blank" rel="noopener noreferrer">CV</a>
 </div>
