--- a/src/research.njk
+++ b/src/research.njk
@@ -1,9 +1,11 @@
 ---
+layout: base.njk
 title: Research
-layout: "base.njk"
 navCategory: /research
 cssFile: "index.css"
 ---
+
+{% import "macros/project.njk" as macros %}
 
 <div class="row">
     <div class="col-12">
@@ -11,10 +13,12 @@ cssFile: "index.css"
     </div>
 </div>
 
-<!-- DESKTOP -->
+{{ macros.project('Reflective Technology & Bereavement','Spring 2021 - Present','Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.','research/bereavement_1x1.png','research/bereavement_16x9.png')}}
+
+{# <!-- DESKTOP -->
 <div class="row desktop">
     <div class="col-lg-4">
-        <img src="{{ '/assets/images/projects/bereavement_1x1.png' | url }}" class="img-fluid">
+        <img src="{{ '/assets/images/research/bereavement_1x1.png' | url }}" class="img-fluid">
     </div>
     <div class="col-lg-7 offset-1">
         <div class="h2">Reflective Technology & Bereavement</div>
@@ -27,7 +31,7 @@ cssFile: "index.css"
 <!-- TABLET -->
 <div class="row tablet">
     <div class="col-sm-5">
-        <img src="{{ '/assets/images/projects/bereavement_16x9.png' | url }}" class="img-fluid">
+        <img src="{{ '/assets/images/research/bereavement_16x9.png' | url }}" class="img-fluid">
     </div>
     <div class="col-sm-6 offset-1">
         <div class="intro-link-bundle">
@@ -44,7 +48,7 @@ cssFile: "index.css"
 <!-- MOBILE -->
 <div class="row mobile">
     <div class="col-12">
-        <img src="{{ '/assets/images/projects/bereavement_16x9.png' | url }}" class="img-fluid">
+        <img src="{{ '/assets/images/research/bereavement_16x9.png' | url }}" class="img-fluid">
     </div>
     <div class="col-12">
         <div class="h2">Reflective Technology & Bereavement</div>
@@ -52,25 +56,4 @@ cssFile: "index.css"
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         <a class="button" role="button" href="/">Click Me</a>
     </div>
-</div>
-
-{% include "project.njk" %}
-{% block y %} hiya {% endblock %}
-
-<!-- <div class="row">
-    <div class="col-sm-4">
-        <div class="desktop">
-            <img src="{{ '/assets/images/projects/bereavement_1x1.png' | url }}" class="img-fluid">
-        </div>
-        <div class="tablet mobile">
-            <img src="{{ '/assets/images/projects/bereavement_16x9.png' | url }}" class="img-fluid">
-        </div>
-    </div>
-    <div class="col-sm-1"></div>
-    <div class="col-sm-7">
-        <div class="h2">Reflective Technology & Bereavement</div>
-        <div class="subtitle">Spring 2022 - Present</div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <a class="button" role="button" href="/">Click Me</a>
-    </div>
-</div> -->
+</div> #}
