--- a/src/_includes/partials/navbar.njk
+++ b/src/_includes/partials/navbar.njk
@@ -5,7 +5,7 @@
                 <a class="nav-img" href="{{ '/' | url }}">
                     <img src="/assets/images/favicon.png">
                 </a>
-                {% include "base/nav-links.njk" %}
+                {% include "partials/nav-links.njk" %}
             </nav>
         </div>
     </div>
@@ -26,6 +26,6 @@
         <div id="nav-mobile-x">
             {% include "svg/svg-nav-x.njk" %}
         </div>
-        {% include "base/nav-links.njk" %}
+        {% include "partials/nav-links.njk" %}
     </div>
 </div>
