--- a/src/css/index.css
+++ b/src/css/index.css
@@ -29,3 +29,20 @@
     display: flex;
     flex-direction: column;
 }
+
+.svg-general {
+    color: var(--heading-color);
+    height: 25px;
+    width: 25px;
+    transition: all 0.2s ease;
+}
+
+.mobile .svg-general {
+    height: 22.5px;
+    width: 22.5px;
+}
+
+.svg-general:hover {
+    color: var(--heading-hover-color);
+    transition: all 0.2s ease;
+}
