--- a/src/research.njk
+++ b/src/research.njk
@@ -2,58 +2,17 @@
 layout: base.njk
 title: Research
 navCategory: /research
-cssFile: "index.css"
+cssFile: "projects.css"
 ---
 
 {% import "macros/project.njk" as macros %}
 
-<div class="row">
-    <div class="col-12">
-        <div class="h1">Research</div>
-    </div>
-</div>
-
-{{ macros.project('Reflective Technology & Bereavement','Spring 2021 - Present','Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.','research/bereavement_1x1.png','research/bereavement_16x9.png')}}
-
-{# <!-- DESKTOP -->
-<div class="row desktop">
-    <div class="col-lg-4">
-        <img src="{{ '/assets/images/research/bereavement_1x1.png' | url }}" class="img-fluid">
-    </div>
-    <div class="col-lg-7 offset-1">
-        <div class="h2">Reflective Technology & Bereavement</div>
-        <div class="subtitle">Spring 2022 - Present</div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <a class="button" role="button" href="/">Click Me</a>
-    </div>
-</div>
-
-<!-- TABLET -->
-<div class="row tablet">
-    <div class="col-sm-5">
-        <img src="{{ '/assets/images/research/bereavement_16x9.png' | url }}" class="img-fluid">
-    </div>
-    <div class="col-sm-6 offset-1">
-        <div class="intro-link-bundle">
-            <div class="h2">Reflective Technology & Bereavement</div>
-            <div class="subtitle">Spring 2022 - Present</div>
-        </div>
-    </div>
-    <div class="col-sm-12">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <a class="button" role="button" href="/">Click Me</a>
-    </div>
-</div>
-
-<!-- MOBILE -->
-<div class="row mobile">
-    <div class="col-12">
-        <img src="{{ '/assets/images/research/bereavement_16x9.png' | url }}" class="img-fluid">
-    </div>
-    <div class="col-12">
-        <div class="h2">Reflective Technology & Bereavement</div>
-        <div class="subtitle">Spring 2022 - Present</div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <a class="button" role="button" href="/">Click Me</a>
-    </div>
-</div> #}
+{{ macros.project(
+    'Reflective Technology & Bereavement',
+    'Spring 2021 - Present',
+    'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.',
+    'research/bereavement_1x1.png',
+    'research/bereavement_3x2.png',
+    'research/bereavement_16x9.png',
+    [{label: 'Home', link: '/'},{label: 'Research', link: '/research'}]
+)}}
