--- a/src/index.njk
+++ b/src/index.njk
@@ -51,7 +51,7 @@ title: Colin LeFevre
         <img src="{{ 'assets/images/headshot/headshot_1x1.jpg' | url }}" class="img-fluid">
     </div>
     <div class="col-sm-6 offset-1">
-        <div class="intro-link-bundle">
+        <div class="vertical-center">
             {{ intro() }}
             {{ links() }}
         </div>
