--- a/src/research.njk
+++ b/src/research.njk
@@ -7,12 +7,35 @@ cssFile: "projects.css"
 
 {% import "macros/project.njk" as macros %}
 
+{# Abortion Activism #}
+{{ macros.project(
+    "Technology & Abortion Activism",
+    'Fall 2022 - Present',
+    'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.',
+    'research/abortion_3x2.png',
+    'research/abortion_3x2.png',
+    'research/abortion_16x9.png',
+    [{label: 'Home', link: '/'},{label: 'Research', link: '/research'}]
+)}}
+
+{# Reflection and Bereavement #}
 {{ macros.project(
     'Reflective Technology & Bereavement',
-    'Spring 2021 - Present',
+    'Spring 2022 - Present',
     'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.',
-    'research/bereavement_1x1.png',
+    'research/bereavement_3x2.png',
     'research/bereavement_3x2.png',
     'research/bereavement_16x9.png',
+    [{label: 'Home', link: '/'},{label: 'Research', link: '/research'}]
+)}}
+
+{# Abortion Activism #}
+{{ macros.project(
+    "Digitally Shared Cooking Experiences",
+    'Fall 2021 - Present',
+    'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.',
+    'research/cooking_3x2.png',
+    'research/cooking_3x2.png',
+    'research/cooking_16x9.png',
     [{label: 'Home', link: '/'},{label: 'Research', link: '/research'}]
 )}}
