--- a/src/css/base.css
+++ b/src/css/base.css
@@ -145,3 +145,10 @@ img {
 p {
     margin: 1.25rem 0rem;
 }
+
+.vertical-center {
+    height: 100%;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+}
