--- a/src/_includes/partials/basehead.njk
+++ b/src/_includes/partials/basehead.njk
@@ -1,17 +1,24 @@
+{# Meta Info #}
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<meta name="description" content=""/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta name="description" content="Colin LeFevre's personal website"/>
+<meta name="author" content="Colin LeFevre">
 
+{# Tab Bar #}
 <link rel="icon" type="image/x-icon" href="{{ '/assets/images/favicon.ico' | url }}"/>
-{# <link rel="stylesheet" href="{{ '/css/skeleton.css' | url }}"/>
-<link rel="stylesheet" href="{{ '/css/normalize.css' | url }}"/> #}
+<title>{{title}}</title>
+
+{# Global CSS #}
 <link rel="stylesheet" href="{{ '/css/bootstrap-grid.css' | url }}"/>
 <link rel="stylesheet" href="{{ '/css/base.css' | url }}"/>
 <link rel="stylesheet" href="{{ '/css/navbar.css' | url }}"/>
-<link rel="stylesheet" href="{{ '/css/' + cssFile | url }}"/>
 
-<title>{{title}}</title>
+{# Page-specific CSS #}
+{% for file in cssFile %}
+    <link rel="stylesheet" href="{{ '/css/' + file | url }}"/>
+{% endfor %}
 
+{# JavaScript #}
 <script src="{{ '/js/jquery-3.3.1.js' | url }}" defer></script>
 <script src="{{ '/js/navbar.js' | url }}" defer></script>
