--- a/src/research.njk
+++ b/src/research.njk
@@ -2,21 +2,12 @@
 layout: base.njk
 title: Research
 navCategory: /research
-cssFile: "projects.css"
+cssFile: ["project.css", "research.css"]
 ---
 
-{% import "macros/project.njk" as macros %}
+<div class="h1">Research</div>
 
-{# Abortion Activism #}
-{{ macros.project(
-    "Technology & Abortion Activism",
-    'Fall 2022 - Present',
-    'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.',
-    'research/abortion_3x2.png',
-    'research/abortion_3x2.png',
-    'research/abortion_16x9.png',
-    [{label: 'Home', link: '/'},{label: 'Research', link: '/research'}]
-)}}
+{% import "macros/project.njk" as macros %}
 
 {# Reflection and Bereavement #}
 {{ macros.project(
@@ -26,10 +17,10 @@ cssFile: "projects.css"
     'research/bereavement_3x2.png',
     'research/bereavement_3x2.png',
     'research/bereavement_16x9.png',
-    [{label: 'Home', link: '/'},{label: 'Research', link: '/research'}]
+    [{label: "CHI '24 Paper", link: '/'},{label: "CHI '23 Poster", link: '/'}]
 )}}
 
-{# Abortion Activism #}
+{# Cooking Stories #}
 {{ macros.project(
     "Digitally Shared Cooking Experiences",
     'Fall 2021 - Present',
@@ -37,5 +28,16 @@ cssFile: "projects.css"
     'research/cooking_3x2.png',
     'research/cooking_3x2.png',
     'research/cooking_16x9.png',
-    [{label: 'Home', link: '/'},{label: 'Research', link: '/research'}]
+    [{label: "ECSCW '22 Poster", link: '/'}]
+)}}
+
+{# Abortion Activism #}
+{{ macros.project(
+    "Technology & Abortion Activism",
+    'Fall 2022 - Winter 2023',
+    'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.',
+    'research/abortion_3x2.png',
+    'research/abortion_3x2.png',
+    'research/abortion_16x9.png',
+    [{label: "CSCW '23 Poster", link: '/'}]
 )}}
