--- a/src/_includes/partials/navbar.njk
+++ b/src/_includes/partials/navbar.njk
@@ -1,5 +1,5 @@
 <div class="desktop tablet">
-    <div class="container-fluid">
+    <div class="container-fluid nav-border">
         <div class="container">
             <nav>
                 <a class="nav-img" href="{{ '/' | url }}">
@@ -11,7 +11,7 @@
     </div>
 </div>
 <div class="mobile">
-    <div class="container">
+    <div class="container nav-border">
         <nav>
             <a class="nav-img" href="{{ '/' | url }}">
                 <img src="/assets/images/favicon.png">
