--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -10,7 +10,7 @@
                 {{ content | safe }}
             </div>
         </main>
-        <footer></footer>
+        <footer>{% include "partials/footer.njk" %}</footer>
     </main>
 </body>
 </html>
