--- a/src/_includes/partials/basehead.njk
+++ b/src/_includes/partials/basehead.njk
@@ -13,6 +13,7 @@
 <link rel="stylesheet" href="{{ '/css/bootstrap-grid.css' | url }}"/>
 <link rel="stylesheet" href="{{ '/css/base.css' | url }}"/>
 <link rel="stylesheet" href="{{ '/css/navbar.css' | url }}"/>
+<link rel="stylesheet" href="{{ '/css/footer.css' | url }}"/>
 
 {# Page-specific CSS #}
 {% for file in cssFile %}
