footer mobile wrap vertical padding

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -26,7 +26,15 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 1.5rem 0rem;
+    padding: 1.35rem 0rem;
+    flex-grow: 0;
+    flex-wrap: wrap;
+}
+
+.footer-flex div {
+    /* Separate from .footer-flex to add spacing for mobile wrapping */
+    /* Add up to 1.5rem */
+    padding: 0.15rem 0rem;
 }
 
 .footer-border {
