--- a/src/_includes/partials/navbar.njk
+++ b/src/_includes/partials/navbar.njk
@@ -22,7 +22,7 @@
         </nav>
     </div>
     <nav-border/>
-    <div id="popout" class="container">
+    <div id="popout" class="container hide">
         <div id="nav-mobile-x">
             {% include "svg/svg-nav-x.njk" %}
         </div>
