--- a/src/css/base.css
+++ b/src/css/base.css
@@ -152,3 +152,18 @@ p {
     display: flex;
     flex-direction: column;
 }
+
+/* SCROLLBAR */
+/* WebKit Browsers (Chrome, Safari) */
+::-webkit-scrollbar {
+    width: 0.5rem; 
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--border-color);
+    border-radius: 1rem;/
+}
+
+::-webkit-scrollbar-track {
+    background-color: none;
+}
