--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -8,8 +8,8 @@ nav {
 }
 
 /* MOBILE VS DESKTOP */
-.mobile {
-    background-color: var(--background-color);
+.nav-border {
+    border-bottom: 1.5px solid var(--border-color);
 }
 
 .desktop .nav-links {
@@ -17,10 +17,6 @@ nav {
     flex-flow: row wrap;
     align-items: center;
     gap: var(--nav-gap);
-}
-
-.nav-border {
-    border-bottom: 1.5px solid var(--border-color);
 }
 
 .mobile .nav-links {
@@ -65,6 +61,19 @@ nav a.active,
 nav a.active:hover,
 #popout a.active:hover {
     color: var(--heading-hover-color);
+}
+
+/* FLOATING MOBILE NAV */
+#mobile-nav {
+    position: fixed;
+    top: 0;
+    background-color: var(--background-color);
+    z-index: 9998; /* Less than #popout */
+    transition: all 0.2s ease-in-out;
+}
+
+#mobile-nav.hide {
+    display: none;
 }
 
 /* POPOUT */
