--- a/src/_includes/partials/navbar.njk
+++ b/src/_includes/partials/navbar.njk
@@ -2,12 +2,12 @@
 <div class="desktop tablet">
     <div class="container-fluid nav-border">
         <div class="container">
-            <nav>
+            <div class="nav">
                 <a class="nav-img" href="{{ '/' | url }}">
                     <img src="/assets/images/favicon.png">
                 </a>
                 {% include "partials/nav-links.njk" %}
-            </nav>
+            </div>
         </div>
     </div>
 </div>
@@ -15,15 +15,15 @@
 {# Mobile #}
 <div class="mobile">
     {# Navbar #}
-    <div class="container nav-border" id="mobile-nav">
-        <nav>
+    <div class="container nav-border" id="mobile-nav-wrap">
+        <div class="nav">
             <a class="nav-img" href="{{ '/' | url }}">
                 <img src="/assets/images/favicon.png">
             </a>
             <div id="nav-mobile-bars">
                 {% include "svg/svg-nav-bars.njk" %}
             </div>
-        </nav>
+        </div>
     </div>
     {# Spacing for floating navbar #}
     <div id="mobile-nav-spacer"/>
