--- a/src/css/index.css
+++ b/src/css/index.css
@@ -26,7 +26,7 @@
     color: var(--heading-color);
     height: 25px;
     width: 25px;
-    transition: all 0.2s ease;
+    transition: all var(--transition-delay) var(--transition-style);
 }
 
 .mobile .svg-general {
@@ -36,5 +36,4 @@
 
 .svg-general:hover {
     color: var(--heading-hover-color);
-    transition: all 0.2s ease;
 }
