--- a/src/_includes/partials/nav-links.njk
+++ b/src/_includes/partials/nav-links.njk
@@ -15,5 +15,5 @@
     {% for info in navInfo %}
         <a href="{{ info.id | url}}" class="{{ 'active' if info.id == navCategory}}">{{info.title}}</a>
     {% endfor %}
-    <a href="{{ '/assets/pdfs/CV.pdf'  | url }}" target="_blank" rel="noopener noreferrer">CV</a>
+    <a href="{{ '/assets/pdfs/colinlefevre_cv.pdf'  | url }}" target="_blank" rel="noopener noreferrer">CV</a>
 </div>
