--- a/src/research.njk
+++ b/src/research.njk
@@ -17,7 +17,7 @@ cssFile: ["project.css", "research.css", "buttons.css"]
     img_desktop='research/bereavement_3x2.png',
     img_tablet='research/bereavement_3x2.png',
     img_mobile='research/bereavement_16x9.png',
-    buttons=[{label: "CHI '24 Paper", disabled: true, link: ''},{label: "CHI '23 Poster", link: '/assets/pdfs/reflective_tech_bereavement_chi23.pdf'}]
+    buttons=[{label: "CHI '23 Poster", link: '/assets/pdfs/reflective_tech_bereavement_chi23.pdf'}]
 )}}
 
 {# Cooking Stories #}
