--- a/src/index.njk
+++ b/src/index.njk
@@ -28,8 +28,8 @@ title: Colin LeFevre
 {% macro desc() %}
     <div class="desc">
         <p>I am a Human-Computer Interaction (HCI) researcher at  <a href="https://prohealth.luddy.indiana.edu/">Proactive Health Informatics</a>. I recently graduated from Indiana University Bloomington with a B.S. in Informatics.</p>
-        <p>My research focuses on designing technologies which navigate cultural, social and personal factors to support health and wellbeing. At present, I am particularly interested in digital mental health and self-management.</p>
-        <p>Currently, I am collaborating with my undergraduate research advisor <a href="http://cfchung.com">Dr. Christina Chung</a>, and am awaiting the results of Ph.D. applications.</p>
+        <p>My research focuses on designing technologies which support health and wellbeing in everyday settings. At present, I am particularly interested in digital mental health and self-management. My undergraduate research was advised by <a href="http://cfchung.com">Christina Chung</a>.</p>
+        <p>Currently, I am wrapping up undergraduate research projects, awaiting Ph.D. application results, and generally relaxing.</p>
     </div>
 {% endmacro %}
 
