--- a/src/index.njk
+++ b/src/index.njk
@@ -36,7 +36,7 @@ title: Colin LeFevre
 {# Desktop Layout #}
 <div class="row desktop">
     <div class="col-lg-4">
-        <img src="{{ 'assets/images/headshot/headshot_2x3.jpg' | url }}" class="img-fluid">
+        <img src="{{ 'assets/images/headshot.jpg' | url }}" class="img-fluid crop-2x3">
     </div>
     <div class="col-lg-7 offset-1">
         {{ intro() }}
@@ -48,7 +48,7 @@ title: Colin LeFevre
 {# Tablet Layout #}
 <div class="row tablet">
     <div class="col-sm-5">
-        <img src="{{ 'assets/images/headshot/headshot_1x1.jpg' | url }}" class="img-fluid">
+        <img src="{{ 'assets/images/headshot.jpg' | url }}" class="img-fluid crop-1x1">
     </div>
     <div class="col-sm-6 offset-1">
         <div class="vertical-center">
@@ -64,7 +64,7 @@ title: Colin LeFevre
 {# Mobile Layout #}
 <div class="row mobile">
     <div class="col-12">
-        <img src="{{ 'assets/images/headshot/headshot_16x9.jpg' | url }}" class="img-fluid">
+        <img src="{{ 'assets/images/headshot.jpg' | url }}" class="img-fluid crop-16x9">
     </div>
     <div class="col-12">
         {{ intro() }}
