--- a/src/research.njk
+++ b/src/research.njk
@@ -14,9 +14,7 @@ cssFile: ["project.css", "research.css", "buttons.css"]
     header='Reflective Technology & Bereavement',
     subtitle='Spring 2022 - Present',
     body=["In my undergraduate thesis, I examined how reflective technology can be designed to support bereaved individuals' grieving process. I specifically focused on meaning-making, an outcome of reflection documented in constructivist grief therapies. I was advised by <a href='http://cfchung.com/'>Christina Chung</a>.","A paper on this project was conditionally accepted to CHI '24, and is currently under final review."],
-    img_desktop='research/bereavement_3x2.png',
-    img_tablet='research/bereavement_3x2.png',
-    img_mobile='research/bereavement_16x9.png',
+    img='research/bereavement.jpg',
     buttons=[{label: "CHI '24 Paper", disabled: "true", link: ""},{label: "CHI '23 Poster", link: '/assets/pdfs/reflective_tech_bereavement_chi23.pdf'}]
 )}}
 
@@ -25,9 +23,7 @@ cssFile: ["project.css", "research.css", "buttons.css"]
     header="Digitally Shared Cooking Experiences",
     subtitle='June 2021 - Present',
     body=['In this project, I have contributed to the conceptualization, design, and development of a cultural probe focused on social support for healthy eating. Specifically, the probe investigates the digital sharing of cooking experiences between intergenerational, remote family members. This project is led by <a href="https://aswatipanicker.com/">Aswati Panicker</a> and <a href="http://cfchung.com">Christina Chung</a>.', "Currently, I am focusing on the development of the probe, as well as the design and implementation of an accompanying evaluation study."],
-    img_desktop='research/cooking_3x2.png',
-    img_tablet='research/cooking_3x2.png',
-    img_mobile='research/cooking_16x9.png',
+    img='research/cooking.jpg',
     buttons=[{label: "ECSCW '22 Poster", link: '/assets/pdfs/digital_cooking_experiences_ecscw22.pdf'}]
 )}}
 
@@ -36,8 +32,6 @@ cssFile: ["project.css", "research.css", "buttons.css"]
     header="Technology & Abortion Activism",
     subtitle='Sep 2022 - Dec 2023',
     body=["In this student-led project, we investigated how technology could support pro-choice abortion activists in Indiana following the repeal of Roe v. Wade. We engaged in a three-stage, participatory design process, and designed and developed a prototype supportive system. We were advised by <a href='http://cfchung.com/'>Christina Chung</a> and <a href='https://wphomes.soic.indiana.edu/ksiek/'>Katie Siek</a>"],
-    img_desktop='research/abortion_3x2.png',
-    img_tablet='research/abortion_3x2.png',
-    img_mobile='research/abortion_16x9.png',
+    img='research/abortion.jpg',
     buttons=[{label: "CSCW '23 Poster", link: '/assets/pdfs/abortion_activism_cscw23.pdf'}]
 )}}
